UF-5012: Fix review comments